# ReFitWebsite

./: .env.example  .env.test  .gitignore  BACKEND_README.md  DEPLOYMENT_GUIDE.md  ENV_SETUP.md  ERROR_FIXES_SUMMARY.md  FIXES_APPLIED.md  FOCUS_TRADE_INS.md  PRIVY_CONSOLE_ERRORS_EXPLAINED.md  PRIVY_FIX_INSTRUCTIONS.md  PRIVY_INTEGRATION_COMPLETE.md  PRIVY_SETUP_GUIDE.md  PRIVY_SIGNIN_DEBUG.md  PRIVY_WALLET_INTEGRATION_COMPLETE.md  PRODUCTION_SETUP.md  QUICK_START.md  README.md  REFIT_TOKEN_VISION.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECKLIST.md  SECURITY_FIXES_APPLIED.md  SETUP_LIQUIDITY_POOL.md  SOLANA_PAYMENT_INTEGRATION_RESEARCH.md  SOLANA_PRICE_RESEARCH_PROMPT.md  SOLANA_VENTURES_EMAIL.md  SOLANA_VENTURES_EMAIL_FINAL.md  STAKING_UPDATE.md  SUPABASE_SETUP.md  SYSTEM_REVIEW.md  TOLY_OUTREACH.md  index.html  jest.config.js  jsconfig.json  migrate-to-nextjs.js  next.config.js  package-lock.json  package.json  tailwind.config.js  test-pricing-verification.js  (+2 more)
.claude/: settings.local.json
app/: globals.css  layout.js  page.js
archived/: README.md  shop-page.js
components/: BetaDisclaimerModal.jsx  DemoFlow.jsx  EmailCapture.jsx  FAQ.jsx  Layout.jsx  PhoneForm.jsx  PhoneFormV2.jsx  PriceQuote.jsx  PrivyWalletButton.jsx  Providers.jsx  ReferralProgram.jsx  SeekerComparison.jsx  ShippingAddressForm.jsx  ShippingSelection.jsx  SmartContractDemo.jsx  SmartPhoneSelector.jsx  SmartPhoneSelectorV2.jsx  WalletButton.jsx
config/: production.js
contexts/: WalletContext.jsx
contracts/programs/marketplace/: Cargo.toml
contracts/programs/marketplace/src/: lib.rs
(+337 files in other folders)
