[package]
name = "refit-marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "refit_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "2.0"
mpl-bubblegum = "1.4.0"
spl-account-compression = "0.3.0"
spl-token = "6.0"
borsh = "0.10.3"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"